@@ -1,0 +1,5 @@
+import module namespace refl = "http://www.zorba-xquery.com/modules/reflection";
+
+declare context item := <doc><a/></doc>;
+
+refl:eval("declare context item external; ./a")
