@@ -42,6 +42,7 @@ Bug Fixes/Other Changes:
   * Fixed bug #866984 (better error message for an eval error)
   * Fixed bug #1047538 (jsoniq: SourceFinder::findLocalNodeSources missing
     json expressions)
+  * Fixed #1052383 (accessing context item in eval expr)
   * Fixed bug #1046559 (dynamic resolution between function invocation and jsoniq
     navigation)
   * Fixed bug #932884 (HTML and XHTML serialization of empty elements)
